screwing around with maze stuff

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  color: bisque;
+}
+
+a, a:visited, a:link, a:active, a:hover {
+  color: currentColor;
+  text-decoration: underline;
 }
 
 .card {
